# csxp

./: .clang-tidy  README.md  meson.build
bench/: integration.cpp  main.cpp  map.cpp  meson.build  parser.cpp  reader.cpp  tokenizer.cpp
csxp/: emit.h  main.cpp  meson.build  version.cpp.in
csxp-bench/: integration.cpp  main.cpp  map.cpp  meson.build  reader.cpp
csxp-test/: lib-core.cpp  lib-op.cpp  main.cpp  map-helpers.h  map.cpp  meson.build  reader.cpp
csxp/include/: version.h
include/: atom-fmt.h  atom.h  catch.hpp  emit.h  env.h  parser.h  reader.h  tokenizer.h
include/csxp/lib/detail/: fn.h  util.h
include/lib/: detail-core.h  detail-fn.h  detail-math.h  detail-op.h  lib.h
libcsxp/: atom.cpp  meson.build
libcsxp/bench/: main.cpp  reader.cpp
libcsxp/lib/: detail-core.cpp  detail-fn.cpp  detail-lazy.cpp  detail-math.cpp  detail-util.cpp  lib.cpp
libcsxp/test/: env.cpp  run-helpers.cpp
src/: atom.cpp  csxp-main.cpp  env-test.cpp  env.cpp  fake-lib.cpp  logging.cpp  meson.build  parser-test.cpp  parser.cpp  reader.cpp  run-test.cpp  test-clj.cpp  tokenizer-test.cpp  tokenizer.cpp
src/lib/: detail-core.cpp  detail-fn.cpp  detail-math.cpp  detail-op.cpp  lib.cpp
subprojects/libcsxp/: csxp.cpp  env.cpp  logging.cpp  meson.build  reader.cpp  version.cpp.in
subprojects/libcsxp/bench/: integration.cpp
subprojects/libcsxp/include/csxp/: atom.h  atom_fmt.h  csxp.h  env.h  logging.h  reader.h
subprojects/libcsxp/include/csxp/lib/: lib.h
subprojects/libcsxp/include/csxp/lib/detail/: core.h  env.h  lazy.h  math.h  op.h
subprojects/libcsxp/include/csxp/pdata/: map-detail.h  map.h
subprojects/libcsxp/lib/: detail-core.cpp  detail-env.cpp  detail-fn.cpp  detail-lazy.cpp  detail-op.cpp  detail-util.cpp  lib.cpp
subprojects/libcsxp/test/: integration.cpp  lib-core.cpp  lib-fn.cpp  lib-math.cpp  run-helpers.h
test/: env.cpp  integration.cpp  lib-op.cpp  map-helpers.h  map.cpp  meson.build  parser.cpp  reader.cpp  run-helpers.cpp  run-helpers.h  tokenizer.cpp
